Fixed workout details page. Fixed mobile menu icon / link alignment. fun

--- a/src/index.css
+++ b/src/index.css
@@ -79,7 +79,7 @@ input[type='checkbox']{
 	align-items: center;
 }
 .layout * {
-	width:fit-content;
+	/* width:fit-content; */
 }
 
 .layout.scrollable {
@@ -299,7 +299,7 @@ input.exerciseSearch{
 		font-weight: 500;
 		padding: 0.75rem 1rem;
 		border-radius: 4px;
-		display: block;
+		display: flex;
 		transition: background 0.2s ease;
 	}
 
